# ldbc_finbench_datagen

./: .gitignore  README.md  checkstyle.xml  pom.xml  todos.md
.github/: CODEOWNERS
logs/: .gitignore
paramgen/: parameter_curation.py  search_params.py  time_select.py
scripts/: check_consistency.py  check_deletion.py  check_duplicate.py  check_time.py  check_transfer.py  create_update_streams.py  datagen.sh  factor_table.sh  generate_account.py  get-spark-to-home.sh  loan.py  merge_cluster_output.py  parameter_curation.py  profile_transfer.py  run.py  run.sh  run_cluster.sh  run_local.sh  run_paramgen.sh  search_params.py  split_amount.py  statistic.py  time_split.py
tools/legacy/dataprofiler/: CMakeLists.txt  README.md  algo.h  compile.sh  de_core.cpp  plot.py  profiler.cpp  wcc_core.cpp
tools/legacy/dataprofiler/result/db139/: edges.txt  in-out.txt  in_degree_dist.txt  in_degree_dist_regression.txt  out-in.txt  out_degree_dist.txt  out_degree_dist_regression.txt
tools/legacy/dataprofiler/result/db177/: in-out.txt  in_degree_dist.txt  in_degree_dist_regression.txt  out-in.txt  out_degree_dist.txt  out_degree_dist_regression.txt
tools/legacy/dataprofiler/result/db184/: edges.txt  in-out.txt  in_degree_dist.txt  in_degree_dist_regression.txt  out-in.txt  out_degree_dist.txt  out_degree_dist_regression.txt
tools/legacy/dataprofiler/result/hubvertex_indeg/: hub_indeg_1.txt  hub_indeg_1_regression.txt  hub_indeg_2.txt  hub_indeg_2_regression.txt  hub_indeg_3.txt  hub_indeg_3_regression.txt  hub_indeg_4.txt  hub_indeg_4_regression.txt  hub_indeg_5.txt  hub_indeg_5_regression.txt
tools/legacy/dataprofiler/result/hubvertex_outdeg/: hub_outdeg_1.txt  hub_outdeg_1_regression.txt  hub_outdeg_2.txt  hub_outdeg_2_regression.txt  hub_outdeg_3.txt  hub_outdeg_3_regression.txt  hub_outdeg_4.txt  hub_outdeg_4_regression.txt  hub_outdeg_5.txt  hub_outdeg_5_regression.txt
tools/legacy/dataprofiler/result/transfer/: in-out.txt  in_degree_dist.txt  in_degree_dist_regression.txt  out-in.txt  out_degree_dist.txt  out_degree_dist_regression.txt
(+297 files in other folders)
